fix: обновле gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
+.mvn/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +32,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### My Ignore ###
+mvnw
+mvnw.cmd
