feat: добавлен жанр feat: добавлен рейтинг refactor: переписана дружба и добавлено поддтверждение feat: добавлена база данных

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.netbeans.external</groupId>
 			<artifactId>org-apache-commons-lang3</artifactId>
 			<version>RELEASE130</version>
