--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.sql.init.schema-locations=classpath:/sql/schema.sql
+spring.sql.init.data-locations=classpath:/sql/data.sql
