--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:h2:mem:filmorate
+spring.datasource.url=jdbc:h2:mem:filmorate;MODE=PostgreSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
